--- a/Basic-HTML-Bio.html
+++ b/Basic-HTML-Bio.html
@@ -20,13 +20,45 @@
   </ul>
 
   <table>
-    <tr>
-      <thead>
-        <th>
-          
-        </th>
-      </thead>
-    </tr>
+    <thead>
+        <tr>
+            <th colspan="4">Some of my Favorite stuffs</th>
+        </tr>
+      <tr>
+        <th>Books</th>
+        <th>Movies</th>
+        <th>Songs</th>
+        <th>Activities</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>How to tame your habits</td>
+        <td>Rambo</td>
+        <td>Marry You</td>
+        <td>Running</td>
+      </tr>
+      <tr>
+          <td>Born Free</td>
+          <td>Lion King</td>
+          <td>Halo</td>
+          <td>Skating</td>
+        </tr>
+      <tr>
+        <td>How to tame your habits</td>
+        <td>Rambo</td>
+        <td>Marry You</td>
+        <td>Running</td>
+      </tr>
+      <tr>
+          <td>Views from above</td>
+          <td>Three Bad guys</td>
+          <td>Views</td>
+          <td>Singing</td>
+      </tr>      
+    </tbody>
+
   </table>
 
 
